完成computSentence